SUBDIRS = emoticons icons

pixmapdir   = $(pkgdatadir)/pixmaps
pixmap_DATA = \
    arrow.png \
    away.png \
    emoticon.gif \
    gadu-gadu-away-descr.png \
    gadu-gadu-away.png \
    gadu-gadu-invisible-descr.png \
    gadu-gadu-invisible.png \
    gadu-gadu-offline-descr.png \
    gadu-gadu-offline.png \
    gadu-gadu-online-descr.png \
    gadu-gadu-online.png \
    gadu-gadu.png \
    gg-about.png \
    icon.png \
    icq-away.png \
    icq-dnd.png \
    icq-freechat.png \
    icq-invisible.png \
    icq-na.png \
    icq-occupied.png \
    icq-offline.png \
    icq-online.png \
    icq.png \
    jabber-away.png \
    jabber-dnd.png \
    jabber-error.png \
    jabber-offline.png \
    jabber-online.png \
    jabber.png \
    jabber-xa.png \
    new-msg.png \
    offline.png \
    online.png \
    send-im.png \
    show-hide-inactive.png \
    show-hide-descriptions.png \
    sms_i.png \
    sms.png \
    tlen-away.png \
    tlen-beback.png \
    tlen-chat.png \
    tlen-desc.png \
    tlen-invisible.png \
    tlen-occupied.png \
    tlen-offline.png \
    tlen-online.png \
    tlen.png \
    push-pin.png
    
icondir = $(datadir)/pixmaps
icon_DATA = gg2.png

EXTRA_DIST = $(pixmap_DATA) $(icon_DATA)