themedir   = $(pkgdatadir)/themes
theme_DATA = \
    blue2.theme \
    darkblue.theme \
    default.theme \
    gray2.theme \
    green2.theme \
    lightblue.theme \
    red2.theme \
    thinice.theme \
    vblue2.theme \
    vgreen2.theme \
    vred2.theme \
    white2.theme

EXTRA_DIST = $(theme_DATA)
