pixmapdir   = $(pkgdatadir)/pixmaps/emoticons
pixmap_DATA = \
    emoticons.def \
    3m_sie.gif \
    8P.gif \
    aniolek.gif \
    beksa.gif \
    bije.gif \
    boje_sie.gif \
    boks.gif \
    brawa.gif \
    buja_w_oblokach.gif \
    bukiet.gif \
    calus.gif \
    cfaniak.gif \
    chatownik.gif \
    chytry.gif \
    cisza.gif \
    cmok.gif \
    co.gif \
    co_jest.gif \
    czarodziej.gif \
    czas.gif \
    czytaj.gif \
    diabelek.gif \
    dobani.gif \
    dostal.gif \
    dresiarz.gif \
    drink.gif \
    dupa.gif \
    faja.gif \
    fuck.gif \
    gafa.gif \
    ganja.gif \
    gazeta.gif \
    glaszcze.gif \
    glupek2.gif \
    glupek.gif \
    gool.gif \
    gra.gif \
    hahaha.gif \
    heej.gif \
    hmmm.gif \
    jablko.gif \
    jem.gif \
    je_pizze.gif \
    jezyk1.gif \
    jezyk2.gif \
    jupi.gif \
    kawa.gif \
    killer.gif \
    klotnia.gif \
    krecka_dostal.gif \
    krzywy.gif \
    kwasny.gif \
    kwiatek.gif \
    list.gif \
    lol.gif \
    menu.gif \
    milosc.gif \
    mruga.gif \
    mutny.gif \
    nauka.gif \
    niee.gif \
    nie.gif \
    nie_powiem.gif \
    nonono.gif \
    obiad.gif \
    oczko2.gif \
    oczko.gif \
    oczy.gif \
    ok2.gif \
    ok.gif \
    okularnik.gif \
    olaboga.gif \
    onajego.gif \
    pada.gif \
    paker.gif \
    palacz.gif \
    papa.gif \
    peace.gif \
    pisze.gif \
    piwko2.gif \
    piwo.gif \
    placze.gif \
    pomocy.gif \
    prezent.gif \
    prysznic.gif \
    przytul.gif \
    puknijsie.gif \
    pytajnik.gif \
    rotfl.gif \
    roza.gif \
    sciana.gif \
    serce.gif \
    serducho.gif \
    serduszka2.gif \
    serduszka.gif \
    sex.gif \
    slonko.gif \
    smutny.gif \
    snieg.gif \
    soczek.gif \
    spie.gif \
    spioch.gif \
    spoko.gif \
    stop.gif \
    szampan.gif \
    tancze.gif \
    telefon.gif \
    tiaaa.gif \
    tort.gif \
    tuptup.gif \
    uczen.gif \
    uscisk.gif \
    usmiech2.gif \
    usmiech.gif \
    usta.gif \
    wanna.gif \
    wc.gif \
    wesoly.gif \
    winko.gif \
    wow.gif \
    wow_na.gif \
    wsciekly.gif \
    wstydnis.gif \
    wykrzyknik.gif \
    ysz.gif \
    zab.gif \
    zakochany.gif \
    zawstydzony.gif \
    zdziwko.gif \
    zeby.gif \
    zegar.gif \
    ziew.gif \
    z_jezorem.gif \
    zly.gif \
    zniesmaczony.gif \
    zygi.gif

EXTRA_DIST = $(pixmap_DATA)