pixmapdir   = $(pkgdatadir)/pixmaps/icons/classic
pixmap_DATA = \
    README \
    gadu-gadu-away-descr.png \
    gadu-gadu-away.png \
    gadu-gadu-invisible-descr.png \
    gadu-gadu-invisible.png \
    gadu-gadu-offline-descr.png \
    gadu-gadu-offline.png \
    gadu-gadu-online-descr.png \
    gadu-gadu-online.png \
    icon.png \
    jabber-auth-from.png \
    jabber-away.png \
    jabber-dnd.png \
    jabber-error.png \
    jabber-noauth.png \
    jabber-offline.png \
    jabber-online.png \
    jabber-xa.png

EXTRA_DIST = $(pixmap_DATA)
