pixmapdir   = $(pkgdatadir)/pixmaps/icons/modern
pixmap_DATA = \
    README \
    gadu-gadu-away-descr.png \
    gadu-gadu-away.png \
    gadu-gadu-invisible-descr.png \
    gadu-gadu-invisible.png \
    gadu-gadu-offline-descr.png \
    gadu-gadu-offline.png \
    gadu-gadu-online-descr.png \
    gadu-gadu-online.png \
    gadu-gadu.png \
    tlen-away.png \
    tlen-beback.png \
    tlen-chat.png \
    tlen-invisible.png \
    tlen-occupied.png \
    tlen-offline.png \
    tlen-online.png \
    icon.png

EXTRA_DIST = $(pixmap_DATA)
