pixmapdir   = $(pkgdatadir)/pixmaps/icons/rozgwiazda
pixmap_DATA = \
    license.txt \
    gadu-gadu-away-descr.png \
    gadu-gadu-away.png \
    gadu-gadu-invisible-descr.png \
    gadu-gadu-invisible.png \
    gadu-gadu-offline-descr.png \
    gadu-gadu-offline.png \
    gadu-gadu-online-descr.png \
    gadu-gadu-online.png \
    icon.png

EXTRA_DIST = $(pixmap_DATA)
